Add access definitions for working with various RBAC APIs. Closes #22.
* Principals API will remain open until integration with the back office proxy is complete.
